Moved jobs page to employments path.

--- a/_pages/employment/jobs.html
+++ b/_pages/employment/jobs.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Latah County Jobs
-permalink: /jobs/
+permalink: /employment/jobs/
 ---
 
 {% for posting in site.data.jobpostings.sheriff %}
