--- a/_pages/officials/home.html
+++ b/_pages/officials/home.html
@@ -18,10 +18,15 @@ permalink: /officials/
   <h1 class="text-center"><small>Commissioners</small></h1>
   {% for official in site.data.officials.commissioners %}
   <div class="col-md-4">
-    <img class=" img img-responsive center-block hidden-xs" src="{{ official.image }}">
-    <h3 class="text-center">{{ official.name }}</h3>
-    <h4 class="text-center"><small>{{ official.district }}</small></h4>
-    <p class="text-justify">{{ official.description }}</p>
+    <a href="{{ site.baseurl }}{{ official.bio }}">
+      <img class=" img img-responsive center-block hidden-xs" width="250" src="{{ official.image }}">
+      <h3 class="text-center">{{ official.name }}</h3>
+    </a>
+    <a href="{{ site.baseurl }}{{ official.page }}" class="text-muted"><h4 class="text-center"><small>{{ official.district }}</small></h4></a>
+    <p class="text-justify">
+      {{ official.description }}<br />
+      <a href="{{ site.baseurl }}{{ official.bio }}">more...</a>
+    </p>
   </div>
   {% endfor %}
 </div>
