Added social links to the home page.

--- a/_pages/home.html
+++ b/_pages/home.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: home
 permalink: /
 ---
 
@@ -74,10 +74,22 @@ permalink: /
               </address>
             </li>
           </ul>
-          <li class="list-group-item">
-            See <a href="http://www.latah.id.us/contact.php" class="link">Contact Us</a> page for department listings.
-            Map to Latah County Courthouse
-          </li>
+          <ul class="list-group">
+            <li class="list-group-item">
+              See <a href="http://www.latah.id.us/contact.php" class="link">Contact Us</a> page for department listings.
+              Map to Latah County Courthouse
+            </li>
+          </ul>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <h4>Social</h4>
+            </li>
+            <li class="list-group-item">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </li>
+          </ul>
         </ul>
       </div>
     </div>
