Removed list highlighting. Fixed #5

--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -17,9 +17,9 @@ permalink: /planning_building/
   		<div class="panel panel-default">
     		<div class="panel-heading">Our Services</div>
     		<div class="list-group">
-      		<a href="#" class="list-group-item">Mapping</a>
-      		<a href="#" class="list-group-item">Building Permits</a>
-      		<a href="#" class="list-group-item">Home Inspections</a>
+      			<li class="list-group-item">Mapping</li>
+      			<li class="list-group-item">Building Permits</li>
+      			<li class="list-group-item">Home Inspections</li>
     		</div>
   		</div>
 		</div>
