--- a/_pages/home.html
+++ b/_pages/home.html
@@ -4,16 +4,18 @@ permalink: /
 ---
 
 <div class="row" id="aboutRow">
-  <div class="thumbnail col-md-2 col-sm-2 hidden-xs">
-    <img class=" img img-responsive" src="http://placehold.it/350x350">
+  <div id="homeimgL" class="thumbnail col-md-2 col-sm-2 hidden-xs">
+    <img class=" img img-responsive" src="{% asset_path field.png %}">
   </div>
   <div class="panel col-md-8 col-sm-8" id="about">
-    <p class="text-justify">
-      Latah County is located in the northern Idaho panhandle; to the immediate west lies <a href="http://www.co.whitman.wa.us/" target="_blank">Whitman County</a>, Washington. These counties are referred to as <strong>The Palouse</strong>, which produces a large share of the wheat, lentils, peas, oats and barley in the United States. The Palouse is home to two major universities, <a href="http://www.uidaho.edu/" target="_blank">University of Idaho</a> and <a href="http://www.wsu.edu" target="_blank">Washington State University</a>.  Latah County incorporated cities include Bovill, <a href="http://www.deary-id.com/" target="_blank">Deary</a>, Genesee, Juliaetta, Kendrick, <a href="http://www.ci.moscow.id.us/" targer="_blank">Moscow</a>, <a href="http://www.potlatch.com/" target="_blank">Onaway</a>, <a href="http://www.potlatch.com/" target="_blank">Potlatch</a> and Troy.  Our unincorporated communities are Avon, Cedar Creek, Farmington, Harvard, Helmer, Howell, Joel, Princeton and Viola.
-    </p>
+    <div class="well">
+      <p class="text-justify">
+        Latah County is located in the northern Idaho panhandle; to the immediate west lies <a href="http://www.co.whitman.wa.us/" target="_blank">Whitman County</a>, Washington. These counties are referred to as <strong>The Palouse</strong>, which produces a large share of the wheat, lentils, peas, oats and barley in the United States. The Palouse is home to two major universities, <a href="http://www.uidaho.edu/" target="_blank">University of Idaho</a> and <a href="http://www.wsu.edu" target="_blank">Washington State University</a>.  Latah County incorporated cities include Bovill, <a href="http://www.deary-id.com/" target="_blank">Deary</a>, Genesee, Juliaetta, Kendrick, <a href="http://www.ci.moscow.id.us/" targer="_blank">Moscow</a>, <a href="http://www.potlatch.com/" target="_blank">Onaway</a>, <a href="http://www.potlatch.com/" target="_blank">Potlatch</a> and Troy.  Our unincorporated communities are Avon, Cedar Creek, Farmington, Harvard, Helmer, Howell, Joel, Princeton and Viola.
+      </p>
+    </div>
   </div>
-  <div class="thumbnail col-md-2 col-sm-2 hidden-xs">
-    <img class=" img img-responsive" src="http://placehold.it/350x350">
+  <div id="homeimgR" class="thumbnail col-md-2 col-sm-2 hidden-xs">
+    <img class=" img img-responsive" src="{% asset_path barn.png %}">
   </div>
 </div>
 <div class="row" id="infoRow">
