Moved links to include the block instead of text.

--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -33,11 +33,11 @@ permalink: /planning_building/
 			<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="headingOne">
-						<h4 class="panel-title">
-							<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">
+						<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">
+							<h4 class="panel-title">
 								Ordinances
-							</a>
-						</h4>
+							</h4>
+						</a>
 					</div>
 					<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
 						<div class="panel-body">
@@ -51,11 +51,11 @@ permalink: /planning_building/
 				</div>
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="headingTwo">
-						<h4 class="panel-title">
-							<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+						<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+							<h4 class="panel-title">
 								Building Applications
-							</a>
-						</h4>
+							</h4>
+						</a>
 					</div>
 					<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
 						<div class="panel-body">
@@ -70,11 +70,11 @@ permalink: /planning_building/
 				</div>
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="headingThree">
-						<h4 class="panel-title">
-							<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-							Building Handouts
-							</a>
-						</h4>
+						<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+							<h4 class="panel-title">
+								Building Handouts
+							</h4>
+						</a>
 					</div>
 					<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false" style="height: 0px;">
 						<div class="panel-body">
@@ -89,11 +89,11 @@ permalink: /planning_building/
 				</div>
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="heading4">
-						<h4 class="panel-title">
-							<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-							Planning Applications
-							</a>
-						</h4>
+						<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
+							<h4 class="panel-title">
+								Planning Applications
+							</h4>
+						</a>
 					</div>
 					<div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4" aria-expanded="false" style="height: 0px;">
 						<div class="panel-body">
@@ -110,11 +110,15 @@ permalink: /planning_building/
 		</div>
 		<!-- End Handouts and Notices -->
 		<!-- Meeting Notice Signup -->
-		<div class="panel panel-default col-md-4 col-md-push-4">
-			<div class="panel-body">
+		<div class=" col-md-4 col-md-push-4 text-center">
+			<div class="panel panel-default">
 				<!-- Button trigger modal -->
 				<a href="#myModal" data-toggle="modal">
-		  		Signup for Meeting Notices
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							Signup for Meeting Notices
+						</h4>
+					</div>
 				</a>
 			</div>
 		</div>
