Added util service to PB. Closes issue #11.

--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -2,6 +2,7 @@
 layout: page
 title: Planning and Building
 permalink: /planning_building/
+util: true
 ---
 <div class="row">
 	<div class="container">
@@ -33,76 +34,54 @@ permalink: /planning_building/
 			<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="headingOne">
-						<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">
+						<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed" id="ordinancesCtrl">
 							<h4 class="panel-title">
 								Ordinances
 							</h4>
 						</a>
 					</div>
 					<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-						<div class="panel-body">
-							<a>Ordinance 1</a><br>
-							<a>Ordinance 2</a><br>
-							<a>Ordinance 3</a><br>
-							<a>Ordinance 4</a><br>
-							<a>Ordinance 5</a><br>
+						<div class="list-group" id="ordinances">
+
 						</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="headingTwo">
-						<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+						<a class="collapsed" id="buildingApplicationsCtrl" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 							<h4 class="panel-title">
 								Building Applications
 							</h4>
 						</a>
 					</div>
 					<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
-						<div class="panel-body">
-							<a href="http://www.latah.id.us/pzc/building_application/Building%20Permit%20Application.pdf" target="_blank">Building Permit Application</a><br>
-							<a href="http://www.latah.id.us/pzc/building_application/Building%20Permit%20Site%20Plan.pdf" target="_blank">Building Permit Site Plan</a><br>
-							<a href="http://www.latah.id.us/pzc/building_application/MH%20Installation%20Application.pdf" target="_blank">MH Installation Application</a><br>
-							<a href="http://www.latah.id.us/pzc/building_application/Mechanical%20permit%20application%202015.pdf" target="_blank">Mechanical permit application 2015</a><br>
-							<a href="http://www.latah.id.us/pzc/building_application/New%20Address%20Request%20Non-Structured.pdf" target="_blank">New Address Request Non-Structured</a><br>
-							<a href="Roof-Siding-Windows Permit Application" target="_blank">Roof-Siding-Windows Permit Application</a><br>
+						<div class="list-group" id="buildingApplications">
 						</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="headingThree">
-						<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+						<a class="collapsed" id="buildingHandoutsCtrl" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 							<h4 class="panel-title">
 								Building Handouts
 							</h4>
 						</a>
 					</div>
 					<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false" style="height: 0px;">
-						<div class="panel-body">
-							<a>Building Handout 1</a><br>
-							<a>Building Handout 2</a><br>
-							<a>Building Handout 3</a><br>
-							<a>Building Handout 4</a><br>
-							<a>Building Handout 5</a><br>
-							<a>Building Handout 6</a><br>
+						<div class="list-group" id="buildingHandouts">
 						</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="heading4">
-						<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
+						<a class="collapsed" id="planningApplicationsCtrl" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
 							<h4 class="panel-title">
 								Planning Applications
 							</h4>
 						</a>
 					</div>
 					<div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4" aria-expanded="false" style="height: 0px;">
-						<div class="panel-body">
-							<a>Planning Applications 1</a><br>
-							<a>Planning Applications 2</a><br>
-							<a>Planning Applications 3</a><br>
-							<a>Planning Applications 4</a><br>
-							<a>Planning Applications 5</a><br>
-							<a>Planning Applications 6</a><br>
+						<div class="list-group" id="planningApplications">
 						</div>
 					</div>
 				</div>
