Updated page layout. Fixes issues #13 and #14

--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -4,133 +4,149 @@ title: Planning and Building
 permalink: /planning_building/
 util: true
 ---
+
 <div class="row">
-	<div class="container">
 	<!-- Department Description -->
-		<div class="col-md-8 hidden-xs panel panel-default">
+	<div class="col-md-8 hidden-xs">
+		<div class="panel panel-default">
 			<p class="panel-body">
 				The County Planning and Building Department administers the county's land use and development ordinances and reviews applications for conditional use permits, subdivisions and zone changes for presentation to the Planning Commission, Zoning Commission and the Board of County Commissioners. The department provides assistance with various land use issues and ensures compliance with existing regulations. Other functions of this department include the enforcement of adopted building code regulations, and providing assistance with community development projects.
 			</p>
 		</div>
-		<!-- End Description -->
-		<!-- Services -->
-		<div class="col-md-4">
-  		<div class="panel panel-default">
-    		<div class="panel-heading">Our Services</div>
-    		<div class="list-group">
-      			<li class="list-group-item">Mapping</li>
-      			<li class="list-group-item">Building Permits</li>
-      			<li class="list-group-item">Home Inspections</li>
-    		</div>
-  		</div>
-		</div>
-		<!-- End Services -->
+	</div>
+	<!-- End Description -->
+	<!-- Services -->
+	<div class="col-md-4">
+  	<div class="panel panel-default">
+  		<div class="panel-heading">
+				<h4 class="panel-title">Our Services<h4>
+			</div>
+  		<div class="list-group">
+      	<li class="list-group-item">Mapping</li>
+      	<li class="list-group-item">Building Permits</li>
+      	<li class="list-group-item">Home Inspections</li>
+    	</div>
+  	</div>
 	</div>
 </div>
+<!-- End Services -->
+<!-- Handouts and Notices -->
 <div class="row">
-	<div class="container"
-		<!-- Handouts and Notices -->
-		<div class="col-md-4">
-			<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingOne">
-						<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed" id="ordinancesCtrl">
-							<h4 class="panel-title">
-								Ordinances
-							</h4>
-						</a>
-					</div>
-					<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-						<div class="list-group" id="ordinances">
-
-						</div>
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingTwo">
-						<a class="collapsed" id="buildingApplicationsCtrl" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-							<h4 class="panel-title">
-								Building Applications
-							</h4>
-						</a>
-					</div>
-					<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
-						<div class="list-group" id="buildingApplications">
-						</div>
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingThree">
-						<a class="collapsed" id="buildingHandoutsCtrl" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-							<h4 class="panel-title">
-								Building Handouts
-							</h4>
-						</a>
-					</div>
-					<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false" style="height: 0px;">
-						<div class="list-group" id="buildingHandouts">
-						</div>
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="heading4">
-						<a class="collapsed" id="planningApplicationsCtrl" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-							<h4 class="panel-title">
-								Planning Applications
-							</h4>
-						</a>
-					</div>
-					<div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4" aria-expanded="false" style="height: 0px;">
-						<div class="list-group" id="planningApplications">
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Handouts and Notices -->
-		<!-- Meeting Notice Signup -->
-		<div class=" col-md-4 col-md-push-4 text-center">
-			<div class="panel panel-default">
-				<!-- Button trigger modal -->
-				<a href="#myModal" data-toggle="modal">
-					<div class="panel-heading">
-						<h4 class="panel-title">
-							Signup for Meeting Notices
-						</h4>
-					</div>
+	<div class="col-md-4">
+		<div class="panel panel-default" id="accordion" role="tablist" aria-multiselectable="true">
+			<!-- Ordinances -->
+			<div class="panel-heading" role="tab" id="headingOne">
+				<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed" id="ordinancesCtrl">
+					<h4 class="panel-title">
+						Ordinances
+					</h4>
 				</a>
 			</div>
+			<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+				<div class="list-group" id="ordinances">
+					<noscript>To view forms please enable JavaScript or update your browser</noscript>
+				</div>
+			</div>
+			<!-- Ordinances -->
+			<!-- Building Applications -->
+			<div class="panel-heading" role="tab" id="headingTwo">
+				<a class="collapsed" id="buildingApplicationsCtrl" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+					<h4 class="panel-title">
+						Building Applications
+					</h4>
+				</a>
+			</div>
+			<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
+				<div class="list-group" id="buildingApplications">
+					<noscript>To view forms please enable JavaScript or update your browser</noscript>
+				</div>
+			</div>
+			<!-- Building Applications -->
+			<!-- Building Handouts -->
+			<div class="panel-heading" role="tab" id="headingThree">
+				<a class="collapsed" id="buildingHandoutsCtrl" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+					<h4 class="panel-title">
+						Building Handouts
+					</h4>
+				</a>
+			</div>
+			<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false" style="height: 0px;">
+				<div class="list-group" id="buildingHandouts">
+					<noscript>To view forms please enable JavaScript or update your browser</noscript>
+				</div>
+			</div>
+			<!-- Building Handouts -->
+			<!-- Planning Applications -->
+			<div class="panel-heading" role="tab" id="heading4">
+				<a class="collapsed" id="planningApplicationsCtrl" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
+					<h4 class="panel-title">
+						Planning Applications
+					</h4>
+				</a>
+			</div>
+			<div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4" aria-expanded="false" style="height: 0px;">
+				<div class="list-group" id="planningApplications">
+					<noscript>To view forms please enable JavaScript or update your browser</noscript>
+				</div>
+			</div>
+			<!-- End Planning Applications -->
 		</div>
-		<!-- Modal -->
-		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		  <div class="modal-dialog" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title" id="myModalLabel">Signup for Meeting Notices</h4>
-		      </div>
-		      <div class="modal-body">
-						<form name="subscribe" method="post" action="">
-  						<p>
-								If you subscribe to this service you will receive an e-mail every time a Planning or Zoning Commission agenda is added or amended to this web site.
-							</p>
-  						<p>
-								Please enter your e-mail address in the box below, select subscribe or unsubscribe and then select the Send Request button.
-							</p>
-  						<p>
-								subscribe:<input type="radio" name="action" value="join" checked="">
-								unsubscribe: <input name="action" type="radio" value="leave">
-							</p>
-  						E-mail Address: <input name="sAddr" type="text" size="35" value="">
-  						<input type="submit" value="Send Request">
-						</form>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		<!-- End Meeting Notice Signup -->
 	</div>
+	<!-- End Handouts and Notices -->
+	<!-- Upcoming Events -->
+	<div class="col-md-4">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h4 class="panel-title">Upcoming Events</h4>
+			</div>
+			<div class="list-group">
+				<span class="list-group-item text-center">No Upcoming Events</span>
+			</div>
+		</div>
+	</div>
+	<!-- End Upcoming Events -->
+	<!-- Meeting Notice Signup -->
+	<div class=" col-md-4 text-center">
+		<div class="panel panel-default">
+			<!-- Button trigger modal -->
+			<a href="#myModal" data-toggle="modal">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						Signup for Meeting Notices
+					</h4>
+				</div>
+			</a>
+		</div>
+	</div>
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Signup for Meeting Notices</h4>
+	      </div>
+	      <div class="modal-body">
+					<form name="subscribe" method="post" action="">
+						<p>
+							If you subscribe to this service you will receive an e-mail every time a Planning or Zoning Commission agenda is added or amended to this web site.
+						</p>
+						<p>
+							Please enter your e-mail address in the box below, select subscribe or unsubscribe and then select the Send Request button.
+						</p>
+						<p>
+							subscribe:<input type="radio" name="action" value="join" checked="">
+							unsubscribe: <input name="action" type="radio" value="leave">
+						</p>
+						E-mail Address: <input name="sAddr" type="text" size="35" value="">
+						<input type="submit" value="Send Request">
+					</form>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	<!-- End Meeting Notice Signup -->
 </div>
