--- a/_pages/home.html
+++ b/_pages/home.html
@@ -24,26 +24,32 @@ permalink: /
       <div class="panel-heading">
         <h3 class="text-center">Notices</h3>
       </div>
-      <div class="panel-body">
-        <ul class="list-group">
-          <li class="list-group-item">
-            April 18 Deadline to Apply for Property Tax Reduction (“Circuit Breaker”)
-          </li>
-        </ul>
+        <div class="list-group">
+          {% for notice in site.data.notices %}
+            {% if notice.home %}
+              <a href="{{ notice.url }}" target="{{ notice.target}}" class="list-group-item text-center">
+                {{ notice.title }}
+              </a>
+            {% endif %}
+          {% endfor %}
+        </div>
       </div>
     </div>
-  </div>
   <div class="container col-md-4" id="news">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="text-center">News</h3>
       </div>
-      <div class="panel-body">
-        <ul class="list-group">
-          <li class="list-group-item">
-            April 18 Deadline to Apply for Property Tax Reduction (“Circuit Breaker”)
-          </li>
-        </ul>
+      <div class="list-group">
+        {% for news in site.data.news %}
+          <a href="{{ new.url }}" target="{{ new.target}}" class="list-group-item text-center">
+            {% if news.title == null  %}
+              <h4>No news at this time.</h4>
+            {% else %}
+              {{ news.title }}
+            {% endif %}
+          </a>
+        {% endfor %}
       </div>
     </div>
   </div>
