Updated commissioners bios.

--- a/_pages/officials/commissioners/dave_mcgraw.html
+++ b/_pages/officials/commissioners/dave_mcgraw.html
@@ -1,8 +1,7 @@
 ---
 layout: page
-title: Tom Lamar
-permalink: /commissioners/bio/tom_lamar/
-department: Commissioner
+title: Dave McGraw
+permalink: /commissioners/bio/dave_mcgraw/
 ---
 
 {% for official in site.data.officials.commissioners %}
