--- a/_pages/officials/commissioners/dick_walser.html
+++ b/_pages/officials/commissioners/dick_walser.html
@@ -1,8 +1,7 @@
 ---
 layout: page
-title: Tom Lamar
-permalink: /commissioners/bio/tom_lamar/
-department: Commissioner
+title: Dick Walser
+permalink: /commissioners/bio/dick_walser/
 ---
 
 {% for official in site.data.officials.commissioners %}
