Updated officials to use cloudinary for images. Fixes issue #21.
This should make images faster and more responsive.

--- a/_pages/officials/commissioners/tom_lamar.html
+++ b/_pages/officials/commissioners/tom_lamar.html
@@ -9,7 +9,7 @@ department: Commissioner
   {% if official.name == page.title %}
     <div class="row">
       <div class="col-md-4">
-        <img src="{{ official.image }}" class="img-responsive" alt="{{ page.title }} - {{ page.department }}" />
+        {% cloudinary officials {{ official.image }} alt="{{ page.title }} - {{ page.department }}" %}
         <h4 class="text-center">
           {{ page.title }}<br />
           <small>Latah County {{ page.department }}</small><br />
