--- a/_pages/home.html
+++ b/_pages/home.html
@@ -5,7 +5,7 @@ permalink: /
 
 <div class="row" id="aboutRow">
   <div id="homeimgL" class="thumbnail col-md-2 col-sm-2 hidden-xs">
-    <img class=" img img-responsive" alt="Wheat field" src="{% asset_path field.png %}">
+    {% cloudinary /img/field.png alt="Wheat Field" %}
   </div>
   <div class="col-md-8 col-sm-8" id="about">
     <div class="well">
@@ -15,7 +15,7 @@ permalink: /
     </div>
   </div>
   <div id="homeimgR" class="thumbnail col-md-2 col-sm-2 hidden-xs">
-    <img class=" img img-responsive" alt="Barn" src="{% asset_path barn.png %}">
+    {% cloudinary /img/barn.png alt="Barn" %}
   </div>
 </div>
 <div class="row" id="infoRow">
