Fixed tag closure.

--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -19,7 +19,7 @@ util: true
 	<div class="col-md-4">
   	<div class="panel panel-default">
   		<div class="panel-heading">
-				<h4 class="panel-title">Our Services<h4>
+				<h4 class="text-center">Our Services</h4>
 			</div>
   		<div class="list-group">
       	<li class="list-group-item">Mapping</li>
@@ -97,7 +97,7 @@ util: true
 	<div class="col-md-4">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h4 class="panel-title">Upcoming Events</h4>
+				<h4 class="text-center">Upcoming Events</h4>
 			</div>
 			<div class="list-group">
 				<span class="list-group-item text-center">No Upcoming Events</span>
