Changed image size.

--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -6,7 +6,7 @@ permalink: /commissioners/
 <div class="row">
   <div class="col-md-4 hidden-xs">
     <figure class="img-thumbnail">
-      {% cloudinary officials_thumb /img/commissioners.jpg alt="Latah County Commissioners." %}
+      {% cloudinary /img/commissioners.jpg alt="Latah County Commissioners." %}
       <figcaption class="text-justify">
         Latah County Board of County Commissioners from left to right: Tom Lamar (Chair, District II), Richard Walser (District I), and Dave McGraw (District II)
       </figcaption>
