Made accordian scrollable, Updated panel headings.

--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -34,6 +34,9 @@ util: true
 <div class="row">
 	<div class="col-md-4">
 		<div class="panel panel-default" id="accordion" role="tablist" aria-multiselectable="true">
+			<div class="panel-heading text-center">
+				<h4>Applications &amp; Handouts</h4>
+			</div>
 			<!-- Ordinances -->
 			<div class="panel-heading" role="tab" id="headingOne">
 				<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed" id="ordinancesCtrl">
@@ -43,7 +46,7 @@ util: true
 				</a>
 			</div>
 			<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-				<div class="list-group" id="ordinances">
+				<div class="list-group pre-scrollable" id="ordinances">
 					<noscript>To view forms please enable JavaScript or update your browser</noscript>
 				</div>
 			</div>
@@ -57,7 +60,7 @@ util: true
 				</a>
 			</div>
 			<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
-				<div class="list-group" id="buildingApplications">
+				<div class="list-group pre-scrollable" id="buildingApplications">
 					<noscript>To view forms please enable JavaScript or update your browser</noscript>
 				</div>
 			</div>
@@ -71,7 +74,7 @@ util: true
 				</a>
 			</div>
 			<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false" style="height: 0px;">
-				<div class="list-group" id="buildingHandouts">
+				<div class="list-group pre-scrollable" id="buildingHandouts">
 					<noscript>To view forms please enable JavaScript or update your browser</noscript>
 				</div>
 			</div>
@@ -85,7 +88,7 @@ util: true
 				</a>
 			</div>
 			<div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4" aria-expanded="false" style="height: 0px;">
-				<div class="list-group" id="planningApplications">
+				<div class="list-group pre-scrollable" id="planningApplications">
 					<noscript>To view forms please enable JavaScript or update your browser</noscript>
 				</div>
 			</div>
@@ -111,7 +114,7 @@ util: true
 			<!-- Button trigger modal -->
 			<a href="#myModal" data-toggle="modal">
 				<div class="panel-heading">
-					<h4 class="panel-title">
+					<h4>
 						Signup for Meeting Notices
 					</h4>
 				</div>
